--- a/templates/analysis/predict.html
+++ b/templates/analysis/predict.html
@@ -61,7 +61,7 @@
           <a class="c-sidebar-nav-link" href="/experiment/list">
             <svg class="c-sidebar-nav-icon">
               <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-pencil"></use>
-            </svg> Experiments
+            </svg> LCF
           </a>
         </li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
