--- a/templates/rotating/list.html
+++ b/templates/rotating/list.html
@@ -282,7 +282,7 @@
                         <td><img v-bind:src="[[ rt.pic2 ]]"></td>
                         <td><img v-bind:src="[[ rt.pic3 ]]"></td -->
                         <td>
-                          <span class="badge badge-warning"><a v-bind:href="'/rotating/report/' + rt.rtid">R</a></span>
+                          <span class="badge badge-warning"><a href="/rotating/list">R</a></span>
                         </td>
                         <td>
                           <span class="badge badge-warning"><a v-bind:href="'/rotating/modify/' + rt.rtid">M</a></span>
